[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/lilmenu2.gd" type="Script" id=1]
[ext_resource path="res://Assets/lilmenu2.png" type="Texture" id=2]
[ext_resource path="res://WhiteButtons/375w.png" type="Texture" id=3]
[ext_resource path="res://WhiteButtons/3752w.png" type="Texture" id=4]
[ext_resource path="res://WhiteButtons/23408w.png" type="Texture" id=5]
[ext_resource path="res://WhiteButtons/234082w.png" type="Texture" id=6]
[ext_resource path="res://WhiteButtons/home_button_png_667790w.png" type="Texture" id=7]
[ext_resource path="res://WhiteButtons/home_button_png_6677902w.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "In"
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.470588 ), Color( 1, 1, 1, 0.784314 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ContinueButton:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SettingsButton:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HomeButton:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "Visibility"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Out"
length = 0.65
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ContinueButton:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SettingsButton:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HomeButton:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "Visibility"
} ]
}

[node name="lilmenu2" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.647059 )
margin_right = 750.0
margin_bottom = 1587.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/In = SubResource( 1 )
anims/Out = SubResource( 2 )

[node name="ContinueButton" type="TextureButton" parent="."]
visible = false
margin_left = 283.284
margin_top = 706.896
margin_right = 795.284
margin_bottom = 1218.9
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="SettingsButton" type="TextureButton" parent="."]
visible = false
margin_left = 280.951
margin_top = 510.924
margin_right = 792.951
margin_bottom = 1022.92
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )

[node name="HomeButton" type="TextureButton" parent="."]
visible = false
margin_left = 283.284
margin_top = 903.317
margin_right = 795.284
margin_bottom = 1415.32
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
[connection signal="pressed" from="ContinueButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="HomeButton" to="." method="_on_TextureButton3_pressed"]
